# image-classification

./: README.md  cat_dog.ipynb  cifar.ipynb  compare.ipynb  image_classification.pptx  pyproject.toml
